--- a/BooksApp/wwwroot/css/site.css
+++ b/BooksApp/wwwroot/css/site.css
@@ -20,3 +20,10 @@ html {
 body {
   margin-bottom: 60px;
 }
+.footer {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    white-space: nowrap;
+    line-height: 60px;
+}
